Oh boy, TreeList works great!
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1882 696c4f5c-992c-4387-df9e-f6c076136008